# Python-Syntax

./: pyproject.toml
imdb/: database.py
leetcode_python/: 3sum.py  duplicate.py  maxSubString.py  stock.py
python_basics/: args.py  basic.py  deque.py  dict.py  lambda.py  list.py  map.py  recursion.py  self.py  set.py  string.py  tuple.py
string/: even.py  prefix.py  reverse.py  rmparen.py
