[project]
name = "testpoetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Sakib Mohammed Sobaha",email = "1905021@ugrad.cse.buet.ac.bd"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
